# kaggle-open-problems-single-cell-perturbations

./: .gitignore  README.md  pyproject.toml
exp/exp001/: config.py  train.py
exp/exp001/config/: train.yaml
exp/exp001/config/dir/: local.yaml
exp/exp002/: config.py  train.py
exp/exp002/config/: train.yaml
notebook/: eda001.ipynb  eda002.ipynb
run/: create_folds.py  download.py  train.py
run/conf/: create_folds.yaml  train.yaml
run/conf/dir/: local.yaml
run/conf/gcs/: default.yaml
run/conf/reducer/: pca.yaml
src/: conf.py  metrics.py
src/kaggle_open_problems_single_cell_perturbations/: __init__.py
src/reducer/: functions.py
src/utils/: gcs.py
