[project]
name = "kaggle-open-problems-single-cell-perturbations"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuya Shintani", email = "yuya.shintani.uplus26e7@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
