[project]
name = "kaggle-open-problems-single-cell-perturbations"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuya Shintani", email = "yuya.shintani.uplus26e7@gmail.com" }
]
dependencies = [
    "pydantic>=2.5.2",
    "hydra-core>=1.3.2",
    "dacite>=1.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true
